--- a/src/main/webapp/templates/common/header.xhtml
+++ b/src/main/webapp/templates/common/header.xhtml
@@ -5,5 +5,6 @@
 </head>
 <body>
 	<h:outputText value="Header"></h:outputText>
+	<h:link action="#{employeeBean.logout}" value="Logout"></h:link>
 </body>
 </html>
